fixed some spacing

--- a/styles.css
+++ b/styles.css
@@ -90,9 +90,17 @@ h2 {
     display:flex;
     flex-direction: column;
     flex:1 1 20%;
-    width: 20%;
+    width: 25%;
     height: 100%;
     margin: 0% 5% 0% 5%;
+}
+
+.polaroid-text {
+    flex: 1;
+    display:flex;
+    flex-direction: column;
+    margin: 0% 10% 0% 10%;
+    max-height: 60%;
 }
 
 .bio-photo {
@@ -108,8 +116,5 @@ h2 {
     height: auto;
     max-height: 100%;
     font-weight:100;
-}
-
-.details {
-    margin-left: 10%;
+    margin-right: 5%;
 }
